# Amugokna

./: 6조 최종 보고서 (1).docx  CMakeLists.txt  README.docx  README.md  build.gradle  capstone-be216-firebase-adminsdk-y3mv9-8d7c88b99b.json  readme.txt  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/example/inha_capston/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/inha_capston/: AudioListFragment.java  MainActivity.java  OptionFragment.java  PlayFragment.java  RecordFragment.java  ResultFragment.java  StringInputFragment.java  WaitFragment.java
app/src/main/java/com/example/inha_capston/adapter/: AudioListAdapter.java
app/src/main/res/drawable/: ic_create_new_folder_24px.xml  ic_down.xml  ic_library_music_24px.xml  ic_load_file_96dp.xml  ic_mic_none.xml  ic_not_album.xml  ic_nothing.xml  ic_ok.xml  ic_pause_circle_filled_24px.xml  ic_play_arrow_black.xml  ic_play_circle_filled_24px.xml  ic_record_list_24dp.xml  ic_record_mic_96dp.xml  ic_up.xml  player_bg.xml
app/src/main/res/layout/: activity_main.xml  fragment_audio_list.xml  fragment_option.xml  fragment_play.xml  fragment_record.xml  fragment_result.xml  fragment_string_input.xml  fragment_wait.xml  player_sheet.xml  single_audio_list.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml
app/src/test/java/com/example/inha_capston/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mobile-ffmpeg-audio-4.3.2/: build.gradle
(+16 files in other folders)
